package behavioral.strategy.duck_65cntt;

public class FlyNoWay implements IFlyBehavior{
  @Override
  public String fly(){
    return "Bay kiểu thấp mặt đất";
  }
}
