package behavioral.strategy.duck_65cntt;

public class FlyWithWings implements IFlyBehavior {
  @Override
  public String fly() {
    return "Vịt bay theo kiểu hình sin";
  }
}
