package behavioral.strategy.duck_65cntt;

public interface IFlyBehavior {
  String fly();
}
