package behavioral.strategy.duck_65cntt;

public interface IQuackBehavior {
  String quack();
}
