package behavioral.strategy.duck_65cntt;

public class Quack implements IQuackBehavior{
  @Override
  public String quack(){
    return "quack...";
  }
}
