package behavioral.strategy.duck_65cntt;

public class SQuack implements IQuackBehavior{
  @Override
  public String quack() {
    return "Quack quack quack quack...quack";
  }
}
