@startuml
'https://plantuml.com/class-diagram
abstract class Duck{
+ void performQuack()
+ void performFly()
+ void swim()
+ {abstract} display()
+ void setFlyBehavior(IFlyBehavior f)
+ void setQuackBehavior(IQuackBehavior q)
}
interface IFlyBehavior{
+ String fly()
}
interface IQuackBehavior {
+ String quack()
}
class FlyWithWings
class FlyNoWay
class Quack
class SQuack
class VitGioi

Duck --> IFlyBehavior: flybehavior
Duck --> IQuackBehavior: quackbehavior
IFlyBehavior <|..FlyNoWay
IFlyBehavior <|..FlyWithWings
IQuackBehavior <|.. Quack
IQuackBehavior <|.. SQuack
Duck <|-- VitGioi
@enduml